@@ -1,5 +1,10 @@
 2002-01-08  Glynn Foster  <glynn.foster@sun.com>
 
+	* gnome-panel-properties.c: Fix up to reflect the user intuitive
+	global property config changes.
+
+2002-01-08  Glynn Foster  <glynn.foster@sun.com>
+
 	* panel-gconf.c: Add some more error checking to the loading of 
 	gconf. Still far from adequate, but it might just stop panel from 
 	crapping out. Thanks to Mark for bugging me about this ;)
